our holiday deals are better

--- a/index.html
+++ b/index.html
@@ -14,8 +14,19 @@
         <h1>   Celebration  </h1>
     </div>
     <h2>65% OFF</h2>
-    <p>OUR HOLIDAY DEALS ARE BETTER</p>
+    <div class="op">
+        <p>OUR HOLIDAY DEALS ARE BETTER</p>
+    </div>
     <h3>ALL CATEGORIES</h3>
+    <div class="image">
+        <img src="images/New Year Photo.png" alt="">
+
+
+       <div class="hi">
+    <div class="plk">
+      
+    </div>
+    <div class="contaner"></div>
 </div>
 </body>
 </html>
