--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
     <div class="plk">
       
     </div>
-    <div class="contaner"></div>
+    <div class="contaner">
+        <div class="er">
+            <p>Welcome to 
+                midnight<br> party
+            </p>
+            <p>Dolor sit amet consectetur.consequat eget consectectetur maecenas sed molestie 
+                malesuada. ipsum sed sodales risus ut pellentesque vie euismod.
+            </p>
+        </div>
+    </div>
 </div>
 </body>
 </html>
