--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
 <p style="color: black;"><span class="fg">Place: New</span> Park Hotel</p>
 <p style="color: black;"><span class="fg">Date:</span> 31 December Night 2023</p>
 <p style="color: black;"><span class="fg">Time:</span> Evening 7.30 Pm To 12.30 Am</p>
+<button class="join">Join Now</button>
 </div>
 </div>
-
-
 </div>
 </body>
 </html>
